BUGFIX #3430 page versions don't appear automatically in Safari - versions DOM panel was floated behind the edit form
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@70781 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_left.css
+++ b/css/cms_left.css
@@ -226,6 +226,7 @@ ul.tree span.a span.modified,
 .listpane div.unitBody {
 	overflow: auto;
 	width: 100%;
+	clear: left;
 }
 
 .listpane li a {
